Criando layout da página de cadastro de livros

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -7,7 +7,7 @@
   	<display-name>casadocodigo</display-name>
   	
   	<welcome-file-list>
-  		<welcome-file>index.xhtml</welcome-file>
+  		<welcome-file>home.xhtml</welcome-file>
   	</welcome-file-list>
   
   	<servlet>
@@ -24,5 +24,10 @@
 	<context-param>
 		<param-name>javax.faces.PROJECT_STAGE</param-name>
 		<param-value>Development</param-value>
+	</context-param>
+	
+	<context-param>
+	    <param-name>javax.faces.FACELETS_SKIP_COMMENTS</param-name>
+	    <param-value>true</param-value>
 	</context-param>
 </web-app>
